<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/login_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/menu"
            android:textColor="@color/black"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="50dp">

        <Button
            android:id="@+id/bt_vend"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:text="@string/vend"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:background="@drawable/bt_enter"/>
        <Button
            android:id="@+id/bt_cad"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:text="@string/cad"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:background="@drawable/bt_enter"/>
        <Button
            android:id="@+id/bt_stock"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:text="@string/stock"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:background="@drawable/bt_enter"/>
        <Button
            android:id="@+id/bt_relat"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:text="@string/relat"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/bt_enter"/>
    </LinearLayout>

</LinearLayout>