<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bt_enter"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_item"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/quant_item"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/price_item"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/discount_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/discount_item"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageButton
                android:id="@+id/add_item"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/add"/>

            <TextView
                android:id="@+id/quant_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/value_default_int"
                android:textSize="22sp" />

            <ImageButton
                android:id="@+id/rem_item"
                android:layout_width="35dp"
                android:layout_marginStart="20dp"
                android:layout_height="35dp"
                android:background="@drawable/button_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/rem"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
