<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bt_enter"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cod_item_cad"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_item_cad"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_item_cad"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>