<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/login_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="58sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/text_input"
            android:textAlignment="center"
            android:inputType="text"
            android:hint="@string/user"
            android:textColor="@color/gray"
            tools:ignore="Autofill,LabelFor,TextContrastCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp">

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/text_input"
            android:textAlignment="center"
            android:inputType="text"
            android:hint="@string/pass"
            android:textColor="@color/gray"
            tools:ignore="Autofill,LabelFor,TextContrastCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/bt_enter"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/bt_enter"/>

    </LinearLayout>

</LinearLayout>
