<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_background"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/menu_vend"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/price_vend"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/value_default_float"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="86dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/quant_itens"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/value_default_int"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/discount"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/value_default_float"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/quant_serv"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/value_default_int"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/price_final"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/value_default_float"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="355dp"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="end"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/add_item"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="45dp"
                    android:background="@drawable/button_add"
                    android:scaleType="centerCrop"
                    android:src="@drawable/add"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bt_save"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/bt_enter"
                    android:text="@string/save_vend"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager_add"
                android:layout_width="355dp"
                android:layout_height="400dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/bt_back_vend"
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bt_enter"
                    android:text="@string/back_vend"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>